update all project

--- a/html/flex-it/pages/service/service-single-10.html
+++ b/html/flex-it/pages/service/service-single-10.html
@@ -35,7 +35,7 @@
 
   <!-- main-LTR -->
   <link rel="stylesheet" href="../../css/main-LTR.css">
-  <title> flex-IT   |   Архитектурное проектирование</title>
+  <title> flex-IT   |  Облачная платформа</title>
 </head>
 <body class=" dark-theme ">
 <!--Start Page Header-->
@@ -85,7 +85,7 @@
   <div class="overlay-color" data-bg-opacity=".75"></div>
   <div class="container">
     <div class="hero-text-area centerd">
-      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Архитектурное проектирование</h1>
+      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Облачная платформа</h1>
       <nav aria-label="breadcrumb ">
         <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
           <li class="breadcrumb-item"><a class="breadcrumb-link" href="#0"><i class="bi bi-house icon "></i>Главная</a></li>
@@ -107,7 +107,7 @@
           <div class="service-content">
             <div class="part">
               <h2 class="service-title">Описание</h2>
-              <p class="service-text">«Архитектурное проектирование» от АИС Сокол — это специализированный сервис по созданию устойчивой, масштабируемой и гибкой архитектуры программных решений. Мы помогаем заказчикам закладывать прочный фундамент для долгосрочного развития, минимизировать технический долг и обеспечить лёгкость внедрения новых функций.</p>
+              <p class="service-text">Облачная платформа  — это комплексное решение для проектирования, развертывания и сопровождения частных, публичных и гибридных облачных инфраструктур. Наша платформа обеспечивает гибкость и масштабируемость, позволяя заказчикам быстро адаптировать ИТ ресурсы под любые бизнес задачи: от разработки и тестирования до критичных продакшен сервисов.</p>
             </div>
             <div class="part">
               <div class="two-cols-img ">
@@ -127,70 +127,74 @@
           <div class="service-content">
             <div class="part">
               <h2 class="service-title">Основные возможности и функционал</h2>
-              <p class="service-text">•	Анализ требований и доменной модели<br/>
-                Глубокое изучение бизнес процессов заказчика.<br/>
-                Проектирование доменных контекстов в соответствии с DDD (Domain Driven Design).<br/><br/>
-                •	Проектирование микросервисов и SOA<br/>
-                Разбиение монолита на микросервисы с чёткими границами ответственности.<br/>
-                Построение сервис ориентированной архитектуры (SOA) для корпоративных систем.<br/><br/>
-                •	API Gateway и управление контрактами<br/>
-                Настройка API Gateway для маршрутизации, аутентификации и контроля версий.<br/>
-                Документирование и валидация API контрактов (OpenAPI/Swagger).<br/><br/>
-                •	Проектирование событийных потоков<br/>
-                Внедрение Event Driven подхода с использованием брокеров сообщений.<br/>
-                Проектирование CQRS и Event Sourcing для сложных сценариев.<br/><br/>
-                •	Управление качеством и безопасностью<br/>
-                Выбор паттернов отказоустойчивости (Circuit Breaker, Bulkhead).<br/>
-                Интеграция стандартов безопасности (OAuth2, OpenID Connect, JWT).<br/><br/>
-                •	Документирование и прототипирование<br/>
-                Генерация архитектурных диаграмм (C4, UML).<br/>
-                Быстрые прототипы ключевых компонентов для валидации концепций.<br/><br/>
-
-
+              <p class="service-text">•	Проектирование архитектуры<br/>
+                Анализ текущей ИТ ландшафта и бизнес требований.<br/>
+                Разработка целевой архитектуры (private/public/hybrid).<br/>
+                Проработка сетевой топологии, безопасности и резервирования.<br/><br/>
+                •	Развертывание инфраструктуры<br/>
+                Автоматизированное создание кластеров Kubernetes и Docker окружений.<br/>
+                Интеграция с OpenStack для частного облака и с публичными провайдерами (AWS, Azure, GCP).<br/>
+                Настройка сетевых сервисов (VPN, VPC, Load Balancer, DNS).<br/><br/>
+                •	Конфигурационное управление и оркестрация<br/>
+                Инфраструктура как код с Terraform и Ansible.<br/>
+                Управление секретами и конфигурациями.<br/><br/>
+                •	CI/CD конвейеры<br/>
+                Построение сквозного пайплайна от коммита до продакшен деплоя.<br/>
+                Интеграция с GitLab CI, Jenkins, GitHub Actions.<br/><br/>
+                •	Мониторинг и логирование<br/>
+                Внедрение Prometheus, Grafana, ELK/EFK стека.<br/>
+                Настройка оповещений и дашбордов по SLA.<br/><br/>
+                •	Сопровождение и поддержка<br/>
+                Регулярные обновления и патч менеджмент.<br/>
+                Резервное копирование, аварийное восстановление (DR).<br/>
+                24/7 техническая поддержка и SLA контроль.
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Используемые технологии</h2>
-              <p class="service-text">•	Microservices & SOA: Spring Cloud, Quarkus, .NET Core, Apache Camel<br/>
-                •	API Gateway: Kong, AWS API Gateway, NGINX Plus, Zuul<br/>
-                •	Domain Driven Design: EventStorming, Context Mapping, Aggregates<br/>
-                •	Messaging & Eventing: Apache Kafka, RabbitMQ, AWS SNS/SQS<br/>
-                •	Контейнеризация и оркестрация: Docker, Kubernetes, Helm<br/>
-                •	Service Mesh: Istio, Linkerd<br/>
-                •	Инфраструктура как код: Terraform, Ansible, Pulumi<br/>
-
+              <p class="service-text">•	Контейнеризация и оркестрация: Docker, Kubernetes, Helm.<br/>
+                •	Частное облако: OpenStack, KVM, Ceph.<br/>
+                •	Инфраструктура как код: Terraform, Ansible.<br/>
+                •	CI/CD: GitLab CI/CD, Jenkins, GitHub Actions.<br/>
+                •	Мониторинг и логирование: Prometheus, Grafana, ELK/EFK.<br/>
+                •	Облачные API: AWS, Azure, GCP SDK/API.<br/>
+                •	Сетевые решения: Calico/Flannel, Istio, HAProxy, Nginx.<br/>
+                •	Безопасность: Vault (HashiCorp), RBAC, VPN, межсетевые экраны.
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Целевая аудитория и клиентские сегменты</h2>
-              <p class="service-text">•	Стартапы: нуждаются в гибкой архитектуре, готовой к быстрому росту и частым изменениям требований.<br/>
-                •	Системные интеграторы: реализуют сложные проекты с множеством внешних систем и сервисов.<br/>
-                •	Крупные ИТ компании: модернизация устаревших монолитов и выстраивание единой корпоративной архитектуры.<br/>
-
-
+              <p class="service-text">•	Средний и крупный бизнес<br/>
+                Оптимизация расходов на ИТ инфраструктуру, повышение гибкости и отказоустойчивости.<br/><br/>
+                •	IT компании и разработчики<br/>
+                Быстрый старт проектов, стандартизация окружений, ускорение релизов.<br/><br/>
+                •	Учреждения с критичными ИТ сервисами<br/>
+                Банки, телеком операторы, государственные организации — высокий уровень безопасности и SLA.<br/><br/>
+                •	Стартапы и инновационные проекты<br/>
+                Экономичное масштабирование и возможность «расти» вместе с бизнесом
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Возможности развития и интеграции</h2>
-              <p class="service-text">•	Облачные экосистемы
-                Глубокая интеграция с AWS, Azure, GCP: сервисы авто скейлинга, сервисные шины, FaaS.<br/>
-                •	DevOps и CI/CD
-                Встраивание архитектурных проверок в пайплайны Jenkins, GitLab CI, GitHub Actions.<br/>
-                •	Платформенные решения
-                Переход к PaaS/CaaS с использованием OpenShift, Cloud Foundry.<br/>
-                •	AI поддержка архитекторов
-                Инструменты анализа архитектурных паттернов на базе машинного обучения.<br/>
-                •	Enterprise Architecture Frameworks
-                Внедрение практик TOGAF, Zachman для стратегического управления ИТ ландшафтом.
-
-
+              <p class="service-text">•	Автоматическое масштабирование<br/>
+                Настройка HPA/Cluster Autoscaler, serverless функции (Knative).<br/><br/>
+                •	Service Mesh и микросервисы<br/>
+                Внедрение Istio/Linkerd для управления трафиком, безопасности и наблюдаемости.<br/><br/>
+                •	DevSecOps подход<br/>
+                Интеграция SAST/DAST, сканирование контейнеров, проверка соответствия нормативам (PCI DSS, GDPR).<br/><br/>
+                •	Мульти облачные сценарии<br/>
+                Единственная точка управления ресурсами в разных облаках, переносимость нагрузок.<br/><br/>
+                •	Интеграция с ITSM/CMDB<br/>
+                Подключение ServiceNow, Jira Service Management, CMDB систем для сквозного управления инцидентами и изменениями.<br/><br/>
+                •	Облачная аналитика и BI<br/>
+                Встраивание Data Lake, Spark кластеры, инструменты для обработки больших данных.
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">
                 Заключение
               </h2>
-              <p class="service-text">Сервис «Архитектурное проектирование» от АИС Сокол закладывает прочный технологический фундамент, позволяющий быстро адаптироваться к изменениям рынка и масштабировать решения без потери качества. Комбинация передовых практик DDD, микросервисов, SOA и API ориентированного подхода обеспечивает долгосрочную эффективность и предсказуемость развития ИТ продуктов.
+              <p class="service-text">Облачная платформа предлагает полный цикл услуг по созданию и сопровождению облачной инфраструктуры любого масштаба и сложности. Используя передовые инструменты контейнеризации, оркестрации, инфраструктуры как кода и CI/CD, мы помогаем заказчикам минимизировать риски, ускорить вывод продуктов на рынок и обеспечить надёжную работу критичных сервисов.
               </p>
             </div>
           </div>
@@ -205,14 +209,14 @@
             <ul class="list">
               <li class="list-item "><i class="flaticon-web-development font-icon"></i><a href="./service-single-argoTech.html">ReID‑ система<br/> межкамерного трекинга<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-nanotechnology font-icon"></i><a href="./service-single-2.html">Автоматизация<br/> бизнес процессов<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item active"><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item "><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-4.html"> Биржа краудфандинга B2B<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-search font-icon"></i><a href="./service-single-5.html">Веб-сайты<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-6.html"> Интеграция модулей ИИ<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-7.html">ИИ системы под ключ<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-8.html"> Компьютерное зрение<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-9.html">Научные модули<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-10.html">Облачная платформа<i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item active"><i class="flaticon-strategy font-icon"></i><a href="./service-single-10.html">Облачная платформа<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-11.html">Система видеоконтроля<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-12.html">Система управления доступом<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-13.html">Machine Vision<i class="bi bi-arrow-right icon "></i></a></li>
@@ -325,50 +329,6 @@
 <!-- Start back-to-top Button-->
 <div class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up icon "></i>
 </div>
-<!-- End back-to-top Button-->
-<!-- Start privacy-policy-modal-->
-<div class="modal privacy-policy-modal fade" id="privacyPolicyModal" aria-labelledby="PrivacyPolicyModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable modal-xl ">
-    <div class="modal-content text-dark">
-      <div class="modal-header">
-        <h2 class="modal-title" id="PrivacyPolicyModalLabel">Privacy Policy Modal Title</h2>
-        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn-solid" type="button" data-bs-dismiss="modal" aria-label="Close">Click to close</button>
-        <button class="btn-outline" type="button">Do somthing else</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End privacy-policy-modal-->
-
 <!--     JQuery     -->
 <script src="../../js/vendors/jquery-3.6.1.min.js"></script>
 
