--- a/html/flex-it/pages/service/service-single-13.html
+++ b/html/flex-it/pages/service/service-single-13.html
@@ -35,7 +35,7 @@
 
   <!-- main-LTR -->
   <link rel="stylesheet" href="../../css/main-LTR.css">
-  <title> flex-IT   |   Архитектурное проектирование</title>
+  <title> flex-IT   |  Machine Vision</title>
 </head>
 <body class=" dark-theme ">
 <!--Start Page Header-->
@@ -85,7 +85,7 @@
   <div class="overlay-color" data-bg-opacity=".75"></div>
   <div class="container">
     <div class="hero-text-area centerd">
-      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Архитектурное проектирование</h1>
+      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Machine Vision</h1>
       <nav aria-label="breadcrumb ">
         <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
           <li class="breadcrumb-item"><a class="breadcrumb-link" href="#0"><i class="bi bi-house icon "></i>Главная</a></li>
@@ -107,7 +107,8 @@
           <div class="service-content">
             <div class="part">
               <h2 class="service-title">Описание</h2>
-              <p class="service-text">«Архитектурное проектирование» от АИС Сокол — это специализированный сервис по созданию устойчивой, масштабируемой и гибкой архитектуры программных решений. Мы помогаем заказчикам закладывать прочный фундамент для долгосрочного развития, минимизировать технический долг и обеспечить лёгкость внедрения новых функций.</p>
+              <p class="service-text">«Machine Vision» – это программное обеспечение, которое объединяет передовые алгоритмы компьютерного зрения для анализа изображений и видео, позволяя компаниям автоматизировать задачи контроля качества, распознавания документов, мониторинга производства и многое другое. Продукт будет легко интегрироваться в существующую IT-инфраструктуру клиента через API и готовые модули.
+              </p>
             </div>
             <div class="part">
               <div class="two-cols-img ">
@@ -126,71 +127,48 @@
         <div class="service-content-area">
           <div class="service-content">
             <div class="part">
-              <h2 class="service-title">Основные возможности и функционал</h2>
-              <p class="service-text">•	Анализ требований и доменной модели<br/>
-                Глубокое изучение бизнес процессов заказчика.<br/>
-                Проектирование доменных контекстов в соответствии с DDD (Domain Driven Design).<br/><br/>
-                •	Проектирование микросервисов и SOA<br/>
-                Разбиение монолита на микросервисы с чёткими границами ответственности.<br/>
-                Построение сервис ориентированной архитектуры (SOA) для корпоративных систем.<br/><br/>
-                •	API Gateway и управление контрактами<br/>
-                Настройка API Gateway для маршрутизации, аутентификации и контроля версий.<br/>
-                Документирование и валидация API контрактов (OpenAPI/Swagger).<br/><br/>
-                •	Проектирование событийных потоков<br/>
-                Внедрение Event Driven подхода с использованием брокеров сообщений.<br/>
-                Проектирование CQRS и Event Sourcing для сложных сценариев.<br/><br/>
-                •	Управление качеством и безопасностью<br/>
-                Выбор паттернов отказоустойчивости (Circuit Breaker, Bulkhead).<br/>
-                Интеграция стандартов безопасности (OAuth2, OpenID Connect, JWT).<br/><br/>
-                •	Документирование и прототипирование<br/>
-                Генерация архитектурных диаграмм (C4, UML).<br/>
-                Быстрые прототипы ключевых компонентов для валидации концепций.<br/><br/>
-
-
+              <h2 class="service-title">Ключевые функции</h2>
+              <p class="service-text">•	Распознавание и классификация изображений: автоматическое выявление объектов, дефектов, маркировок или текста на изображениях.<br/>
+                •	Анализ видео в реальном времени: контроль потокового видео для выявления аномалий, мониторинга безопасности или отслеживания производственных процессов.<br/>
+                •	Обработка документов: автоматическое извлечение информации из отсканированных документов, чеков, накладных и других бумажных носителей.<br/>
+                •	Обучение и адаптация: возможность дообучения моделей на данных клиента для повышения точности распознавания в специфичных сценариях.<br/>
+                •	Интеграция с ERP/CRM системами: модуль для быстрой интеграции результатов анализа в бизнес-процессы компании.
               </p>
             </div>
             <div class="part">
-              <h2 class="service-title">Используемые технологии</h2>
-              <p class="service-text">•	Microservices & SOA: Spring Cloud, Quarkus, .NET Core, Apache Camel<br/>
-                •	API Gateway: Kong, AWS API Gateway, NGINX Plus, Zuul<br/>
-                •	Domain Driven Design: EventStorming, Context Mapping, Aggregates<br/>
-                •	Messaging & Eventing: Apache Kafka, RabbitMQ, AWS SNS/SQS<br/>
-                •	Контейнеризация и оркестрация: Docker, Kubernetes, Helm<br/>
-                •	Service Mesh: Istio, Linkerd<br/>
-                •	Инфраструктура как код: Terraform, Ansible, Pulumi<br/>
-
+              <h2 class="service-title">Технологическая основа</h2>
+              <p class="service-text">•	Глубокое обучение: использование нейронных сетей для обработки изображений.<br/>
+                •	Облачные технологии: масштабируемая архитектура, позволяющая обрабатывать большие объемы данных и интегрироваться с облачными сервисами.<br/>
+                •	Интерфейс API: разработка удобного REST API для интеграции с другими системами, позволяя клиентам легко внедрять функционал компьютерного зрения в свои приложения.<br/>
+                •	Безопасность и приватность: применение современных протоколов защиты данных, соответствующих регламентированным стандартам и другим нормативным требованиям.
               </p>
             </div>
             <div class="part">
-              <h2 class="service-title">Целевая аудитория и клиентские сегменты</h2>
-              <p class="service-text">•	Стартапы: нуждаются в гибкой архитектуре, готовой к быстрому росту и частым изменениям требований.<br/>
-                •	Системные интеграторы: реализуют сложные проекты с множеством внешних систем и сервисов.<br/>
-                •	Крупные ИТ компании: модернизация устаревших монолитов и выстраивание единой корпоративной архитектуры.<br/>
-
-
+              <h2 class="service-title">Преимущества для бизнеса</h2>
+              <p class="service-text">•	Автоматизация рутинных процессов: снижение трудозатрат за счёт автоматической обработки изображений и видео.<br/>
+                •	Повышение точности и скорости анализа: ИИ позволяет быстро реагировать на изменения и выявлять аномалии, что способствует уменьшению брака и потерь.<br/>
+                •	Гибкость интеграции: модульная архитектура позволяет настраивать систему под специфические потребности разных отраслей – от производства до финансов.<br/>
+                •	Экономия ресурсов: оптимизация бизнес-процессов ведёт к снижению издержек и повышению эффективности работы компании.
               </p>
             </div>
             <div class="part">
-              <h2 class="service-title">Возможности развития и интеграции</h2>
-              <p class="service-text">•	Облачные экосистемы
-                Глубокая интеграция с AWS, Azure, GCP: сервисы авто скейлинга, сервисные шины, FaaS.<br/>
-                •	DevOps и CI/CD
-                Встраивание архитектурных проверок в пайплайны Jenkins, GitLab CI, GitHub Actions.<br/>
-                •	Платформенные решения
-                Переход к PaaS/CaaS с использованием OpenShift, Cloud Foundry.<br/>
-                •	AI поддержка архитекторов
-                Инструменты анализа архитектурных паттернов на базе машинного обучения.<br/>
-                •	Enterprise Architecture Frameworks
-                Внедрение практик TOGAF, Zachman для стратегического управления ИТ ландшафтом.
-
-
-              </p>
-            </div>
-            <div class="part">
-              <h2 class="service-title">
-                Заключение
-              </h2>
-              <p class="service-text">Сервис «Архитектурное проектирование» от АИС Сокол закладывает прочный технологический фундамент, позволяющий быстро адаптироваться к изменениям рынка и масштабировать решения без потери качества. Комбинация передовых практик DDD, микросервисов, SOA и API ориентированного подхода обеспечивает долгосрочную эффективность и предсказуемость развития ИТ продуктов.
+              <h2 class="service-title">Отрасли в которых применим продукт:</h2>
+              <p class="service-text">•	Производство:<br/>
+                Автоматизированный контроль качества продукции позволяет выявлять дефекты на ранних этапах производства, что снижает затраты и повышает эффективность работы.<br/>
+                •	Ритейл:<br/>
+                Анализ поведения посетителей, мониторинг очередей и контроль соблюдения стандартов безопасности в магазинах помогают оптимизировать управление торговыми точками и улучшать клиентский сервис.<br/>
+                •	Логистика и складирование:<br/>
+                Системы компьютерного зрения могут отслеживать перемещение товаров, контролировать процессы загрузки и разгрузки, а также управлять запасами, что повышает оперативность складских операций.<br/>
+                •	Финансовая сфера:<br/>
+                Распознавание и автоматизация обработки документов (чеков, счетов, договоров) ускоряет документооборот и снижает вероятность ошибок при ручном вводе данных.<br/>
+                •	Здравоохранение:<br/>
+                Наблюдение в отделениях интенсивной терапии, автоматический анализ видеопотоков для отслеживания жизненных показателей пациентов, выявления признаков ухудшения состояния или изменений в поведении. Мониторинг процедур дезинфекции, контроля стерильности в операционных и палатах, что способствует снижению риска инфекций и улучшению общей безопасности в медицинских учреждениях.<br/>
+                •	Безопасность и видеонаблюдение:<br/>
+                Мониторинг общественных пространств, выявление подозрительных объектов и аномалий в реальном времени улучшают процессы обеспечения безопасности и предотвращения происшествий.<br/>
+                •	Сельское хозяйство:<br/>
+                Использование для мониторинга состояния посевов, выявления болезней растений и оценки урожайности помогает оптимизировать агротехнические мероприятия.<br/><br/>
+                Эти отрасли обладают высоким потенциалом для внедрения передовых решений в области компьютерного зрения, что может привести к значительному повышению эффективности бизнес-процессов и сокращению операционных затрат.<br/><br/>
+                Такой продукт не только поможет клиентам автоматизировать существующие процессы, но и станет мощным инструментом для принятия оперативных решений на основе анализа визуальных данных.
               </p>
             </div>
           </div>
@@ -205,7 +183,7 @@
             <ul class="list">
               <li class="list-item "><i class="flaticon-web-development font-icon"></i><a href="./service-single-argoTech.html">ReID‑ система<br/> межкамерного трекинга<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-nanotechnology font-icon"></i><a href="./service-single-2.html">Автоматизация<br/> бизнес процессов<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item active"><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item "><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-4.html"> Биржа краудфандинга B2B<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-search font-icon"></i><a href="./service-single-5.html">Веб-сайты<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-6.html"> Интеграция модулей ИИ<i class="bi bi-arrow-right icon "></i></a></li>
@@ -215,7 +193,7 @@
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-10.html">Облачная платформа<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-11.html">Система видеоконтроля<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-12.html">Система управления доступом<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-13.html">Machine Vision<i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item active"><i class="flaticon-strategy font-icon"></i><a href="./service-single-13.html">Machine Vision<i class="bi bi-arrow-right icon "></i></a></li>
             </ul>
           </div>
         </div>
@@ -325,50 +303,6 @@
 <!-- Start back-to-top Button-->
 <div class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up icon "></i>
 </div>
-<!-- End back-to-top Button-->
-<!-- Start privacy-policy-modal-->
-<div class="modal privacy-policy-modal fade" id="privacyPolicyModal" aria-labelledby="PrivacyPolicyModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable modal-xl ">
-    <div class="modal-content text-dark">
-      <div class="modal-header">
-        <h2 class="modal-title" id="PrivacyPolicyModalLabel">Privacy Policy Modal Title</h2>
-        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn-solid" type="button" data-bs-dismiss="modal" aria-label="Close">Click to close</button>
-        <button class="btn-outline" type="button">Do somthing else</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End privacy-policy-modal-->
-
 <!--     JQuery     -->
 <script src="../../js/vendors/jquery-3.6.1.min.js"></script>
 
