--- a/html/flex-it/pages/service/service-single-7.html
+++ b/html/flex-it/pages/service/service-single-7.html
@@ -35,7 +35,7 @@
 
   <!-- main-LTR -->
   <link rel="stylesheet" href="../../css/main-LTR.css">
-  <title> flex-IT   |   Архитектурное проектирование</title>
+  <title> flex-IT   |  Интеллектуальные информационные системы под ключ (CRM / ERP / SCADA)</title>
 </head>
 <body class=" dark-theme ">
 <!--Start Page Header-->
@@ -85,7 +85,7 @@
   <div class="overlay-color" data-bg-opacity=".75"></div>
   <div class="container">
     <div class="hero-text-area centerd">
-      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Архитектурное проектирование</h1>
+      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Интеллектуальные информационные системы под ключ (CRM / ERP / SCADA)</h1>
       <nav aria-label="breadcrumb ">
         <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
           <li class="breadcrumb-item"><a class="breadcrumb-link" href="#0"><i class="bi bi-house icon "></i>Главная</a></li>
@@ -107,7 +107,7 @@
           <div class="service-content">
             <div class="part">
               <h2 class="service-title">Описание</h2>
-              <p class="service-text">«Архитектурное проектирование» от АИС Сокол — это специализированный сервис по созданию устойчивой, масштабируемой и гибкой архитектуры программных решений. Мы помогаем заказчикам закладывать прочный фундамент для долгосрочного развития, минимизировать технический долг и обеспечить лёгкость внедрения новых функций.</p>
+              <p class="service-text">Продукт «Интеллектуальные информационные системы под ключ» представляет собой комплексное решение для разработки корпоративных систем, охватывающих управление взаимоотношениями с клиентами (CRM), планирование ресурсов предприятия (ERP) и системы управления технологическими процессами (SCADA). Решение включает полный цикл разработки – от проектирования и реализации до поддержки и обслуживания, обеспечивая интеграцию с системами искусственного интеллекта для аналитической обработки данных. Продукт гарантирует надежную авторизацию пользователей, многоуровневый доступ через веб-интерфейсы, мобильные приложения и Telegram-боты, а также масштабируемую архитектуру и отказоустойчивость в условиях высоких нагрузок.</p>
             </div>
             <div class="part">
               <div class="two-cols-img ">
@@ -127,62 +127,68 @@
           <div class="service-content">
             <div class="part">
               <h2 class="service-title">Основные возможности и функционал</h2>
-              <p class="service-text">•	Анализ требований и доменной модели<br/>
-                Глубокое изучение бизнес процессов заказчика.<br/>
-                Проектирование доменных контекстов в соответствии с DDD (Domain Driven Design).<br/><br/>
-                •	Проектирование микросервисов и SOA<br/>
-                Разбиение монолита на микросервисы с чёткими границами ответственности.<br/>
-                Построение сервис ориентированной архитектуры (SOA) для корпоративных систем.<br/><br/>
-                •	API Gateway и управление контрактами<br/>
-                Настройка API Gateway для маршрутизации, аутентификации и контроля версий.<br/>
-                Документирование и валидация API контрактов (OpenAPI/Swagger).<br/><br/>
-                •	Проектирование событийных потоков<br/>
-                Внедрение Event Driven подхода с использованием брокеров сообщений.<br/>
-                Проектирование CQRS и Event Sourcing для сложных сценариев.<br/><br/>
-                •	Управление качеством и безопасностью<br/>
-                Выбор паттернов отказоустойчивости (Circuit Breaker, Bulkhead).<br/>
-                Интеграция стандартов безопасности (OAuth2, OpenID Connect, JWT).<br/><br/>
-                •	Документирование и прототипирование<br/>
-                Генерация архитектурных диаграмм (C4, UML).<br/>
-                Быстрые прототипы ключевых компонентов для валидации концепций.<br/><br/>
-
+              <p class="service-text">•	Полный цикл разработки:<br/>
+                Проектирование, разработка, тестирование, внедрение и последующая техническая поддержка корпоративных систем.<br/><br/>
+                •	Многообразие интерфейсов доступа:<br/>
+                Обеспечение работы через веб-браузеры, мобильные приложения и мессенджеры (Telegram), что позволяет обеспечить доступ из любой точки и на любом устройстве.<br/><br/>
+                •	Безопасность и авторизация:<br/>
+                Реализация многофакторной аутентификации, разграничение прав пользователей и интеграция с корпоративными системами безопасности для защиты данных.<br/><br/>
+                •	Интеграция с искусственным интеллектом:<br/>
+                Внедрение модулей ИИ для анализа больших объемов данных, прогнозирования и автоматизации бизнес-процессов, что способствует принятию обоснованных управленческих решений.<br/><br/>
+                •	Поддержка высоконагруженных решений:<br/>
+                Разработка системы с использованием высокопроизводительных и масштабируемых архитектур для обеспечения бесперебойной работы даже при пиковой нагрузке.<br/><br/>
+                •	Отказоустойчивость:<br/>
+                Реализация резервного копирования, автоматического восстановления и распределенной архитектуры для минимизации времени простоя и сохранения бизнес-данных.<br/><br/>
+                •	Модульность и гибкость:<br/>
+                Возможность выбора и комбинирования модулей CRM, ERP и SCADA в зависимости от специфики бизнеса и задач заказчика.
 
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Используемые технологии</h2>
-              <p class="service-text">•	Microservices & SOA: Spring Cloud, Quarkus, .NET Core, Apache Camel<br/>
-                •	API Gateway: Kong, AWS API Gateway, NGINX Plus, Zuul<br/>
-                •	Domain Driven Design: EventStorming, Context Mapping, Aggregates<br/>
-                •	Messaging & Eventing: Apache Kafka, RabbitMQ, AWS SNS/SQS<br/>
-                •	Контейнеризация и оркестрация: Docker, Kubernetes, Helm<br/>
-                •	Service Mesh: Istio, Linkerd<br/>
-                •	Инфраструктура как код: Terraform, Ansible, Pulumi<br/>
+              <p class="service-text">•	Интеграция с системами ИИ:<br/>
+                Использование алгоритмов машинного обучения и аналитики для обработки данных, автоматизации процессов и поддержки принятия решений.<br/><br/>
+                •	Современные базы данных:<br/>
+                Применение реляционных и нереляционных баз данных для хранения больших объемов информации, обеспечения быстрых операций чтения/записи и масштабируемости.<br/><br/>
+                •	Высоконагруженные архитектуры:<br/>
+                Применение микросервисной архитектуры, контейнеризации и оркестрации (например, с использованием Docker/Kubernetes) для обеспечения масштабируемости и отказоустойчивости системы.<br/><br/>
+                •	Веб и мобильные интерфейсы:<br/>
+                Разработка адаптивных веб-интерфейсов и кроссплатформенных мобильных приложений с современными технологиями (React, Angular, Flutter, Swift, Kotlin).<br/><br/>
+                •	Интеграция с мессенджерами:<br/>
+                Реализация функционала доступа через Telegram (с использованием Telegram API и Webhooks) для оперативной коммуникации и поддержки пользователей.<br/><br/>
+                •	API-ориентированное взаимодействие:<br/>
+                Построение единой платформы взаимодействия между модулями системы и внешними сервисами через RESTful API для обеспечения гибкости интеграции.
+
 
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Целевая аудитория и клиентские сегменты</h2>
-              <p class="service-text">•	Стартапы: нуждаются в гибкой архитектуре, готовой к быстрому росту и частым изменениям требований.<br/>
-                •	Системные интеграторы: реализуют сложные проекты с множеством внешних систем и сервисов.<br/>
-                •	Крупные ИТ компании: модернизация устаревших монолитов и выстраивание единой корпоративной архитектуры.<br/>
-
+              <p class="service-text">•	Крупные корпоративные клиенты:<br/>
+                Предприятия, нуждающиеся в интеграции множества бизнес-процессов и управлении значительными объемами данных, таких как международные корпорации и производственные холдинги.<br/><br/>
+                •	Государственные и муниципальные структуры:<br/>
+                Организации, требующие прозрачности, надежности и соответствия нормативным требованиям в сфере управления ресурсами и технологическими процессами.<br/><br/>
+                •	Средний бизнес и региональные предприятия:<br/>
+                Компании, стремящиеся оптимизировать процессы управления, автоматизировать бизнес-процессы и повысить оперативность принятия решений за счет интеграции ИИ.<br/><br/>
+                •	Отраслевые лидеры:<br/>
+                Сферы, где высокое качество информационных систем критически важно, такие как банковский сектор, энергетика, телекоммуникации и логистика.<br/><br/>
 
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Возможности развития и интеграции</h2>
-              <p class="service-text">•	Облачные экосистемы
-                Глубокая интеграция с AWS, Azure, GCP: сервисы авто скейлинга, сервисные шины, FaaS.<br/>
-                •	DevOps и CI/CD
-                Встраивание архитектурных проверок в пайплайны Jenkins, GitLab CI, GitHub Actions.<br/>
-                •	Платформенные решения
-                Переход к PaaS/CaaS с использованием OpenShift, Cloud Foundry.<br/>
-                •	AI поддержка архитекторов
-                Инструменты анализа архитектурных паттернов на базе машинного обучения.<br/>
-                •	Enterprise Architecture Frameworks
-                Внедрение практик TOGAF, Zachman для стратегического управления ИТ ландшафтом.
-
+              <p class="service-text">•	Модульное расширение функционала:<br/>
+                Возможность добавления специализированных модулей для конкретных отраслей (например, модуль для электронного документооборота, аналитики продаж или мониторинга производства) с минимальными доработками системы.<br/><br/>
+                •	Интеграция с внешними сервисами:<br/>
+                Обеспечение легкой интеграции с ERP-системами, CRM-сервисами, системами бизнес-аналитики (BI) и другими корпоративными приложениями через API.<br/><br/>
+                •	Платформенная адаптивность:<br/>
+                Возможность масштабирования системы в облаке или на локальных серверах с учетом роста данных и увеличения числа пользователей, а также гибкое развертывание в гибридных инфраструктурах.<br/><br/>
+                •	Развитие возможностей ИИ:<br/>
+                Постоянное внедрение новых алгоритмов машинного обучения, искусственного интеллекта и аналитических инструментов для повышения эффективности обработки данных и предиктивного анализа.<br/><br/>
+                •	Поддержка новых стандартов безопасности:<br/>
+                Интеграция с современными механизмами защиты данных, аутентификации и шифрования, а также регулярное обновление решений в соответствии с мировыми стандартами.<br/><br/>
+                •	Расширение каналов доступа:<br/>
+                В будущем планируется разработка дополнительных клиентских приложений и интеграция с новыми мессенджерами для улучшения взаимодействия с пользователями.
 
               </p>
             </div>
@@ -190,7 +196,7 @@
               <h2 class="service-title">
                 Заключение
               </h2>
-              <p class="service-text">Сервис «Архитектурное проектирование» от АИС Сокол закладывает прочный технологический фундамент, позволяющий быстро адаптироваться к изменениям рынка и масштабировать решения без потери качества. Комбинация передовых практик DDD, микросервисов, SOA и API ориентированного подхода обеспечивает долгосрочную эффективность и предсказуемость развития ИТ продуктов.
+              <p class="service-text">«Интеллектуальные информационные системы под ключ (CRM / ERP / SCADA)» от компании АИС Сокол – это универсальное и масштабируемое решение, способное удовлетворить требования самых требовательных клиентов. Благодаря комплексному подходу к разработке, использованию передовых технологий и интеграции с системами искусственного интеллекта, продукт обеспечивает высокий уровень автоматизации и безопасности бизнеса, оптимизируя все ключевые процессы предприятия. Модульная архитектура и гибкость системы позволяют адаптировать решение под конкретные нужды заказчика, делая его незаменимым инструментом для современных корпораций, государственных учреждений и высокотехнологичных компаний в условиях динамично меняющегося рынка.
               </p>
             </div>
           </div>
@@ -205,11 +211,11 @@
             <ul class="list">
               <li class="list-item "><i class="flaticon-web-development font-icon"></i><a href="./service-single-argoTech.html">ReID‑ система<br/> межкамерного трекинга<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-nanotechnology font-icon"></i><a href="./service-single-2.html">Автоматизация<br/> бизнес процессов<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item active"><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item "><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-4.html"> Биржа краудфандинга B2B<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-search font-icon"></i><a href="./service-single-5.html">Веб-сайты<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-6.html"> Интеграция модулей ИИ<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-7.html">ИИ системы под ключ<i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item active"><i class="flaticon-strategy font-icon"></i><a href="./service-single-7.html">ИИ системы под ключ<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-8.html"> Компьютерное зрение<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-9.html">Научные модули<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-10.html">Облачная платформа<i class="bi bi-arrow-right icon "></i></a></li>
@@ -325,50 +331,6 @@
 <!-- Start back-to-top Button-->
 <div class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up icon "></i>
 </div>
-<!-- End back-to-top Button-->
-<!-- Start privacy-policy-modal-->
-<div class="modal privacy-policy-modal fade" id="privacyPolicyModal" aria-labelledby="PrivacyPolicyModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable modal-xl ">
-    <div class="modal-content text-dark">
-      <div class="modal-header">
-        <h2 class="modal-title" id="PrivacyPolicyModalLabel">Privacy Policy Modal Title</h2>
-        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn-solid" type="button" data-bs-dismiss="modal" aria-label="Close">Click to close</button>
-        <button class="btn-outline" type="button">Do somthing else</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End privacy-policy-modal-->
-
 <!--     JQuery     -->
 <script src="../../js/vendors/jquery-3.6.1.min.js"></script>
 
