--- a/html/flex-it/pages/aboutUs/about-us.html
+++ b/html/flex-it/pages/aboutUs/about-us.html
@@ -80,21 +80,21 @@
     </header>
     <!--End Page Header-->
     <!-- Start inner Page hero-->
-    <section class="d-flex align-items-center page-hero  inner-page-hero " id="page-hero">
-      <div class="overlay-photo-image-bg parallax" data-bg-img="assets/images/hero/inner-page-hero.jpg" data-bg-opacity="1"></div>
-      <div class="overlay-color" data-bg-opacity=".75"></div>
-      <div class="container">
-        <div class="hero-text-area centerd">
-          <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">о нас</h1>
-          <nav aria-label="breadcrumb ">
-            <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
-              <li class="breadcrumb-item"><a class="breadcrumb-link" href="../home/home-5.html"><i class="bi bi-house icon "></i>Главная</a></li>
-              <li class="breadcrumb-item active">О нас</li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </section>
+<!--    <section class="d-flex align-items-center page-hero  inner-page-hero " id="page-hero">-->
+<!--      <div class="overlay-photo-image-bg parallax" data-bg-img="assets/images/hero/inner-page-hero.jpg" data-bg-opacity="1"></div>-->
+<!--      <div class="overlay-color" data-bg-opacity=".75"></div>-->
+<!--      <div class="container">-->
+<!--        <div class="hero-text-area centerd">-->
+<!--          <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">о нас</h1>-->
+<!--          <nav aria-label="breadcrumb ">-->
+<!--            <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">-->
+<!--              <li class="breadcrumb-item"><a class="breadcrumb-link" href="../home/home-5.html"><i class="bi bi-house icon "></i>Главная</a></li>-->
+<!--              <li class="breadcrumb-item active">О нас</li>-->
+<!--            </ul>-->
+<!--          </nav>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </section>-->
     <!-- End inner Page hero-->
     <!-- Start  about Section-->
     <section class="about mega-section" id="about">
@@ -370,7 +370,7 @@
           <div class="sec-heading  centered mb-0 ">
             <div class="content-area"><span class=" pre-title       wow fadeInUp " data-wow-delay=".2s">наши контакты</span>
               <h2 class=" title    wow fadeInUp" data-wow-delay=".4s">Свяжитесь с нами</h2>
-              <p class="subtitle   wow fadeInUp " data-wow-delay=".6s">Мы готовы ответить на ваши вопросы и обсудить ваш проект.<br/> Оставьте сообщение, и наши специалисты свяжутся с вами в ближайшее время</p>
+              <p class="info-text" data-wow-delay=".6s">Мы готовы ответить на ваши вопросы и обсудить ваш проект.<br/> Оставьте сообщение, и наши специалисты свяжутся с вами в ближайшее время</p>
             </div>
           </div>
           <!--Start .see-more-area-->
@@ -385,10 +385,15 @@
       <div class="overlay-photo-image-bg" data-bg-img="assets/images/sections-bg-images/footer-bg-1.jpg" data-bg-opacity=".25"></div>
       <div class="container">
         <div class="row footer-cols">
-          <div class="col-12 col-md-8 col-lg-4  footer-col "><img class="img-fluid footer-logo" loading="lazy" src="../../assets/images/logo/logo-colored.png" alt="logo">
+          <div class="col-12 col-md-8 col-lg-4  footer-col  ">
+            <span class='featured-text'>АИС Сокол
+              <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 500 150" preserveaspectratio="none">
+               <path d="M7.7,145.6C109,125,299.9,116.2,401,121.3c42.1,2.2,87.6,11.8,87.3,25.7"></path>
+              </svg>
+            </span>
             <div class="footer-col-content-wrapper">
-              <p class="footer-text-about-us ">
-                Мы создаём современные и функциональные веб-сайты, которые помогают вашему бизнесу выделиться и привлекать клиентов.
+              <p class="footer-text-about-us mt-4 ">
+                Выполняет заказную разработку и комплексное внедрение IT решений для автоматизации бизнес процессов. Мы создаём системы «под ключ», адаптированные под ваши уникальные задачи, и гарантируем стабильную работу в любых условиях.
 
               </p>
             </div>
@@ -417,27 +422,24 @@
             <h2 class=" footer-col-title    ">Заказная разработка</h2>
             <div class="footer-col-content-wrapper">
               <ul class="footer-menu">
-                <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">Агротехнологические
-                  платформы</a>
+                <li class="footer-menu-item "><i class="bi bi-arrow-right icon "></i><a class="about-text" href="../service/service-single-argoTech.html">
+                  <span class="about-text">ReID‑ система межкамерного трекинга</span> </a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Прогнозно-
-                  аналитические</a>
+                  Автоматизация бизнес процессов</a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">Система
-                  визуального контроля качества
+                  Архитектурное проектирование
                 </a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Apps development</a>
+                  Веб-сайты</a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Система распознавания
-                  лиц и силуэтов</a>
+                  Интеграция модулей ИИ</a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Модуль определения
-                  размеров и расстояний</a>
+                  ИИ системы под ключ</a>
                 </li>
               </ul>
             </div>
