--- a/html/flex-it/pages/portfolio/portfolio-fourth.html
+++ b/html/flex-it/pages/portfolio/portfolio-fourth.html
@@ -249,10 +249,15 @@
       <div class="overlay-photo-image-bg" data-bg-img="assets/images/sections-bg-images/footer-bg-1.jpg" data-bg-opacity=".25"></div>
       <div class="container">
         <div class="row footer-cols">
-          <div class="col-12 col-md-8 col-lg-4  footer-col "><img class="img-fluid footer-logo" loading="lazy" src="../../assets/images/logo/logo-colored.png" alt="logo">
+          <div class="col-12 col-md-8 col-lg-4  footer-col  ">
+            <span class='featured-text'>АИС Сокол
+              <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 500 150" preserveaspectratio="none">
+               <path d="M7.7,145.6C109,125,299.9,116.2,401,121.3c42.1,2.2,87.6,11.8,87.3,25.7"></path>
+              </svg>
+            </span>
             <div class="footer-col-content-wrapper">
-              <p class="footer-text-about-us ">
-                Мы создаём современные и функциональные веб-сайты, которые помогают вашему бизнесу выделиться и привлекать клиентов.
+              <p class="footer-text-about-us mt-4 ">
+                Выполняет заказную разработку и комплексное внедрение IT решений для автоматизации бизнес процессов. Мы создаём системы «под ключ», адаптированные под ваши уникальные задачи, и гарантируем стабильную работу в любых условиях.
 
               </p>
             </div>
@@ -281,27 +286,24 @@
             <h2 class=" footer-col-title    ">Заказная разработка</h2>
             <div class="footer-col-content-wrapper">
               <ul class="footer-menu">
-                <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">Агротехнологические
-                  платформы</a>
+                <li class="footer-menu-item "><i class="bi bi-arrow-right icon "></i><a class="about-text" href="../service/service-single-argoTech.html">
+                  <span class="about-text">ReID‑ система межкамерного трекинга</span> </a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Прогнозно-
-                  аналитические</a>
+                  Автоматизация бизнес процессов</a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">Система
-                  визуального контроля качества
+                  Архитектурное проектирование
                 </a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Apps development</a>
+                  Веб-сайты</a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Система распознавания
-                  лиц и силуэтов</a>
+                  Интеграция модулей ИИ</a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Модуль определения
-                  размеров и расстояний</a>
+                  ИИ системы под ключ</a>
                 </li>
               </ul>
             </div>
