--- a/html/flex-it/pages/service/service-single-11.html
+++ b/html/flex-it/pages/service/service-single-11.html
@@ -35,7 +35,7 @@
 
   <!-- main-LTR -->
   <link rel="stylesheet" href="../../css/main-LTR.css">
-  <title> flex-IT   |   Архитектурное проектирование</title>
+  <title> flex-IT   |  Система видеоконтроля</title>
 </head>
 <body class=" dark-theme ">
 <!--Start Page Header-->
@@ -85,7 +85,7 @@
   <div class="overlay-color" data-bg-opacity=".75"></div>
   <div class="container">
     <div class="hero-text-area centerd">
-      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Архитектурное проектирование</h1>
+      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Система видеоконтроля</h1>
       <nav aria-label="breadcrumb ">
         <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
           <li class="breadcrumb-item"><a class="breadcrumb-link" href="#0"><i class="bi bi-house icon "></i>Главная</a></li>
@@ -107,7 +107,9 @@
           <div class="service-content">
             <div class="part">
               <h2 class="service-title">Описание</h2>
-              <p class="service-text">«Архитектурное проектирование» от АИС Сокол — это специализированный сервис по созданию устойчивой, масштабируемой и гибкой архитектуры программных решений. Мы помогаем заказчикам закладывать прочный фундамент для долгосрочного развития, минимизировать технический долг и обеспечить лёгкость внедрения новых функций.</p>
+              <p class="service-text">«Система видеоконтроля» – это комплексное программное решение для организации и управления видеонаблюдением на различных объектах. Продукт обеспечивает доступ к видеопотокам в режиме реального времени, архивирование записей, аналитическую обработку данных с помощью алгоритмов видеоаналитики, а также информирование о событиях и движении. Система адаптирована для работы в современных условиях, сочетая в себе использование IP-камер, облачных технологий и удобных мобильных и веб-интерфейсов.<br/> <br/>
+                Решение нацелено на повышение уровня безопасности и контроля на объектах, позволяя оперативно реагировать на инциденты и проводить анализ работы объекта в ретроспективе.
+              </p>
             </div>
             <div class="part">
               <div class="two-cols-img ">
@@ -127,77 +129,52 @@
           <div class="service-content">
             <div class="part">
               <h2 class="service-title">Основные возможности и функционал</h2>
-              <p class="service-text">•	Анализ требований и доменной модели<br/>
-                Глубокое изучение бизнес процессов заказчика.<br/>
-                Проектирование доменных контекстов в соответствии с DDD (Domain Driven Design).<br/><br/>
-                •	Проектирование микросервисов и SOA<br/>
-                Разбиение монолита на микросервисы с чёткими границами ответственности.<br/>
-                Построение сервис ориентированной архитектуры (SOA) для корпоративных систем.<br/><br/>
-                •	API Gateway и управление контрактами<br/>
-                Настройка API Gateway для маршрутизации, аутентификации и контроля версий.<br/>
-                Документирование и валидация API контрактов (OpenAPI/Swagger).<br/><br/>
-                •	Проектирование событийных потоков<br/>
-                Внедрение Event Driven подхода с использованием брокеров сообщений.<br/>
-                Проектирование CQRS и Event Sourcing для сложных сценариев.<br/><br/>
-                •	Управление качеством и безопасностью<br/>
-                Выбор паттернов отказоустойчивости (Circuit Breaker, Bulkhead).<br/>
-                Интеграция стандартов безопасности (OAuth2, OpenID Connect, JWT).<br/><br/>
-                •	Документирование и прототипирование<br/>
-                Генерация архитектурных диаграмм (C4, UML).<br/>
-                Быстрые прототипы ключевых компонентов для валидации концепций.<br/><br/>
-
-
+              <p class="service-text">•	Видео в реальном времени: Возможность просмотра прямого видеопотока с камер наблюдения через веб-интерфейс или мобильное приложение.<br/>
+                •	Архивирование записей: Автоматическое сохранение видеоархива в облачном хранилище для последующего поиска и анализа.<br/>
+                •	Видеоаналитика: Интеграция алгоритмов, позволяющих анализировать движение на объекте, распознавать события (например, несанкционированный доступ, скопление людей, пересечение виртуальных границ) и автоматически отправлять уведомления.<br/>
+                •	REST API: Предоставление API для интеграции с внешними системами, что облегчает объединение видеоданных с другими платформами и сервисами.<br/>
+                •	Многофункциональные интерфейсы: Разработка удобных мобильных и веб-интерфейсов для управления системой, настройки параметров, просмотра записей и получения аналитических отчетов.<br/>
+                •	Управление доступом: Настройка ролей пользователей и уровня доступа, что обеспечивает безопасность данных и конфиденциальность информации.
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Используемые технологии</h2>
-              <p class="service-text">•	Microservices & SOA: Spring Cloud, Quarkus, .NET Core, Apache Camel<br/>
-                •	API Gateway: Kong, AWS API Gateway, NGINX Plus, Zuul<br/>
-                •	Domain Driven Design: EventStorming, Context Mapping, Aggregates<br/>
-                •	Messaging & Eventing: Apache Kafka, RabbitMQ, AWS SNS/SQS<br/>
-                •	Контейнеризация и оркестрация: Docker, Kubernetes, Helm<br/>
-                •	Service Mesh: Istio, Linkerd<br/>
-                •	Инфраструктура как код: Terraform, Ansible, Pulumi<br/>
-
+              <p class="service-text">•	IP-камеры: Современные сетевые камеры, обеспечивающие высокое качество видеосигнала и стабильное подключение к системе.<br/>
+                •	Облачное хранилище: Облачные сервисы для надежного архивирования видеоданных с возможностью масштабирования хранилища в зависимости от объема записей.<br/>
+                •	Видеоаналитика: Алгоритмы искусственного интеллекта и анализа изображений для обнаружения движения, распознавания лиц, идентификации аномалий и других событий.<br/>
+                •	REST API: Использование стандартизированного программного интерфейса для беспрепятственной интеграции с ERP-системами, системами безопасности и другими корпоративными решениями.<br/>
+                •	Мобильные и веб-интерфейсы: Разработка удобных и интуитивно понятных интерфейсов для управления системой, обеспечивающих быстрый доступ к функциям видеонаблюдения на всех типах устройств.
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Целевая аудитория и клиентские сегменты</h2>
-              <p class="service-text">•	Стартапы: нуждаются в гибкой архитектуре, готовой к быстрому росту и частым изменениям требований.<br/>
-                •	Системные интеграторы: реализуют сложные проекты с множеством внешних систем и сервисов.<br/>
-                •	Крупные ИТ компании: модернизация устаревших монолитов и выстраивание единой корпоративной архитектуры.<br/>
-
-
+              <p class="service-text">•	Бизнес-центры: Обеспечение круглосуточного контроля за охраняемыми помещениями, предотвращение несанкционированного доступа и оперативное реагирование на происшествия.<br/>
+                •	Школы и образовательные учреждения: Контроль за соблюдением порядка, мониторинг перемещений учащихся и сотрудников, обеспечение безопасности на территории.<br/>
+                •	Склады и логистические центры: Контроль доступа, предотвращение краж, организация работы охранных служб.<br/>
+                •	Торговые и производственные объекты: Мониторинг бизнес-процессов, контроль доступа, анализ потоков клиентов и сотрудников для оптимизации работы объекта.
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Возможности развития и интеграции</h2>
-              <p class="service-text">•	Облачные экосистемы
-                Глубокая интеграция с AWS, Azure, GCP: сервисы авто скейлинга, сервисные шины, FaaS.<br/>
-                •	DevOps и CI/CD
-                Встраивание архитектурных проверок в пайплайны Jenkins, GitLab CI, GitHub Actions.<br/>
-                •	Платформенные решения
-                Переход к PaaS/CaaS с использованием OpenShift, Cloud Foundry.<br/>
-                •	AI поддержка архитекторов
-                Инструменты анализа архитектурных паттернов на базе машинного обучения.<br/>
-                •	Enterprise Architecture Frameworks
-                Внедрение практик TOGAF, Zachman для стратегического управления ИТ ландшафтом.
-
-
+              <p class="service-text">•	Модульное расширение функционала: Возможность добавления новых алгоритмов видеоаналитики, таких как распознавание лиц, детекция по заданным параметрам или температурный контроль.<br/>
+                •	Интеграция с системами безопасности: Интеграция с системами контроля доступа, сигнализациями, автоматическими системами оповещения и другими IT-решениями для комплексного обеспечения безопасности.<br/>
+                •	Расширение мобильных возможностей: Улучшение мобильных приложений для оперативного управления системой, проведения анализа и отслеживания событий в режиме реального времени с дополнительных возможностей для аутентификации.<br/>
+                •	Облачные технологии и масштабирование: Использование гибких облачных решений для увеличения объема хранилища и повышения отказоустойчивости системы, что позволит адаптироваться к росту пользовательской базы.<br/>
+                •	Аналитика и Big Data: Разработка дополнительных инструментов для углубленного анализа записей, формирования отчетов и прогностической аналитики, что поможет повышать эффективность системы и удовлетворенность клиентов.<br/>
+                •	Партнерство и API: Расширение партнерской сети за счет интеграции с другими ПО-системами и расширение функционала API для взаимодействия с решениями в области IoT, умных зданий и городских систем мониторинга.
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">
                 Заключение
               </h2>
-              <p class="service-text">Сервис «Архитектурное проектирование» от АИС Сокол закладывает прочный технологический фундамент, позволяющий быстро адаптироваться к изменениям рынка и масштабировать решения без потери качества. Комбинация передовых практик DDD, микросервисов, SOA и API ориентированного подхода обеспечивает долгосрочную эффективность и предсказуемость развития ИТ продуктов.
+              <p class="service-text">«Система видеоконтроля» от компании АИС Сокол – это современное и масштабируемое решение для организации видеонаблюдения на объектах с высоким уровнем безопасности и удобством управления. Используя передовые технологии IP-камер, облачного хранения, видеоаналитики и REST API, продукт обеспечивает надежное хранение данных, оперативный доступ к видео в реальном времени и глубокий анализ событий. Данный продукт подходит для широкого спектра объектов – от бизнес-центров и школ до торговых и производственных площадок. Благодаря гибкой архитектуре и возможностям интеграции с другими системами, система видеоконтроля способна эволюционировать и удовлетворять растущие потребности клиентов, обеспечивая комплексную защиту и повышая эффективность управления объектами.
               </p>
             </div>
           </div>
         </div>
       </div>
       <!--Start service content-->
-      <!-- Start service sidebar-->
       <div class="col-12 col-xl-4">
         <div class="service-sidebar ">
           <div class="sidebar-pane">
@@ -205,7 +182,7 @@
             <ul class="list">
               <li class="list-item "><i class="flaticon-web-development font-icon"></i><a href="./service-single-argoTech.html">ReID‑ система<br/> межкамерного трекинга<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-nanotechnology font-icon"></i><a href="./service-single-2.html">Автоматизация<br/> бизнес процессов<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item active"><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item "><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-4.html"> Биржа краудфандинга B2B<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-search font-icon"></i><a href="./service-single-5.html">Веб-сайты<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-6.html"> Интеграция модулей ИИ<i class="bi bi-arrow-right icon "></i></a></li>
@@ -213,7 +190,7 @@
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-8.html"> Компьютерное зрение<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-9.html">Научные модули<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-10.html">Облачная платформа<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-11.html">Система видеоконтроля<i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item active"><i class="flaticon-strategy font-icon"></i><a href="./service-single-11.html">Система видеоконтроля<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-12.html">Система управления доступом<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-13.html">Machine Vision<i class="bi bi-arrow-right icon "></i></a></li>
             </ul>
@@ -325,50 +302,6 @@
 <!-- Start back-to-top Button-->
 <div class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up icon "></i>
 </div>
-<!-- End back-to-top Button-->
-<!-- Start privacy-policy-modal-->
-<div class="modal privacy-policy-modal fade" id="privacyPolicyModal" aria-labelledby="PrivacyPolicyModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable modal-xl ">
-    <div class="modal-content text-dark">
-      <div class="modal-header">
-        <h2 class="modal-title" id="PrivacyPolicyModalLabel">Privacy Policy Modal Title</h2>
-        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn-solid" type="button" data-bs-dismiss="modal" aria-label="Close">Click to close</button>
-        <button class="btn-outline" type="button">Do somthing else</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End privacy-policy-modal-->
-
 <!--     JQuery     -->
 <script src="../../js/vendors/jquery-3.6.1.min.js"></script>
 
