--- a/html/flex-it/pages/service/service-single-12.html
+++ b/html/flex-it/pages/service/service-single-12.html
@@ -35,7 +35,7 @@
 
   <!-- main-LTR -->
   <link rel="stylesheet" href="../../css/main-LTR.css">
-  <title> flex-IT   |   Архитектурное проектирование</title>
+  <title> flex-IT   |  Система управления доступом</title>
 </head>
 <body class=" dark-theme ">
 <!--Start Page Header-->
@@ -85,7 +85,7 @@
   <div class="overlay-color" data-bg-opacity=".75"></div>
   <div class="container">
     <div class="hero-text-area centerd">
-      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Архитектурное проектирование</h1>
+      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Система управления доступом</h1>
       <nav aria-label="breadcrumb ">
         <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
           <li class="breadcrumb-item"><a class="breadcrumb-link" href="#0"><i class="bi bi-house icon "></i>Главная</a></li>
@@ -107,7 +107,8 @@
           <div class="service-content">
             <div class="part">
               <h2 class="service-title">Описание</h2>
-              <p class="service-text">«Архитектурное проектирование» от АИС Сокол — это специализированный сервис по созданию устойчивой, масштабируемой и гибкой архитектуры программных решений. Мы помогаем заказчикам закладывать прочный фундамент для долгосрочного развития, минимизировать технический долг и обеспечить лёгкость внедрения новых функций.</p>
+              <p class="service-text">«Система управления доступом» – это передовое программное решение, разработанное для обеспечения комплексной защиты информационных систем. Продукт ориентирован на гарантию безопасности данных и информационных ресурсов за счёт многоуровневой аутентификации, строгой авторизации, гибкого разграничения прав доступа и детального контроля действий пользователей. Система предназначена для интеграции в масштабные корпоративные среды, где высокий уровень конфиденциальности данных является основным требованием.
+              </p>
             </div>
             <div class="part">
               <div class="two-cols-img ">
@@ -127,62 +128,64 @@
           <div class="service-content">
             <div class="part">
               <h2 class="service-title">Основные возможности и функционал</h2>
-              <p class="service-text">•	Анализ требований и доменной модели<br/>
-                Глубокое изучение бизнес процессов заказчика.<br/>
-                Проектирование доменных контекстов в соответствии с DDD (Domain Driven Design).<br/><br/>
-                •	Проектирование микросервисов и SOA<br/>
-                Разбиение монолита на микросервисы с чёткими границами ответственности.<br/>
-                Построение сервис ориентированной архитектуры (SOA) для корпоративных систем.<br/><br/>
-                •	API Gateway и управление контрактами<br/>
-                Настройка API Gateway для маршрутизации, аутентификации и контроля версий.<br/>
-                Документирование и валидация API контрактов (OpenAPI/Swagger).<br/><br/>
-                •	Проектирование событийных потоков<br/>
-                Внедрение Event Driven подхода с использованием брокеров сообщений.<br/>
-                Проектирование CQRS и Event Sourcing для сложных сценариев.<br/><br/>
-                •	Управление качеством и безопасностью<br/>
-                Выбор паттернов отказоустойчивости (Circuit Breaker, Bulkhead).<br/>
-                Интеграция стандартов безопасности (OAuth2, OpenID Connect, JWT).<br/><br/>
-                •	Документирование и прототипирование<br/>
-                Генерация архитектурных диаграмм (C4, UML).<br/>
-                Быстрые прототипы ключевых компонентов для валидации концепций.<br/><br/>
-
+              <p class="service-text">•	Аутентификация пользователей:<br/>
+                Обеспечение безопасного входа в систему с использованием современных протоколов и механизмов проверки подлинности.<br/><br/>
+                •	Авторизация и разграничение прав доступа:<br/>
+                Гибкая настройка прав доступа на основе ролей (RBAC) и атрибутов (ABAC). Администраторы могут создавать детальные политики доступа для различных пользователей и групп.<br/><br/>
+                •	Контроль действий пользователей:<br/>
+                Мониторинг активности в режиме реального времени с логированием и созданием подробных отчетов о действиях пользователей, что позволяет своевременно обнаруживать и реагировать на подозрительные операции.<br/><br/>
+                •	Интегрированный единый вход (SSO):<br/>
+                Реализация функции единого входа позволяет упростить управление учетными записями и повысить удобство использования за счёт автоматизированной передачи авторизационных данных между системами.<br/><br/>
+                •	Управление пользователями и группами:<br/>
+                Возможность централизованного управления учетными записями с детальной настройкой профилей и прав доступа для различных сегментов пользователей.<br/><br/>
+                •	Логирование и аудит безопасности:<br/>
+                Система ведет детальное логирование всех операций, что способствует выполнению требований комплаенса и аудита, а также помогает выявлять нарушения безопасности.<br/><br/>
+                •	Интеграция с внешними источниками аутентификации:<br/>
+                Поддержка LDAP для синхронизации пользовательских баз и обеспечения бесшовной работы в существующих инфраструктурах компаний.
 
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Используемые технологии</h2>
-              <p class="service-text">•	Microservices & SOA: Spring Cloud, Quarkus, .NET Core, Apache Camel<br/>
-                •	API Gateway: Kong, AWS API Gateway, NGINX Plus, Zuul<br/>
-                •	Domain Driven Design: EventStorming, Context Mapping, Aggregates<br/>
-                •	Messaging & Eventing: Apache Kafka, RabbitMQ, AWS SNS/SQS<br/>
-                •	Контейнеризация и оркестрация: Docker, Kubernetes, Helm<br/>
-                •	Service Mesh: Istio, Linkerd<br/>
-                •	Инфраструктура как код: Terraform, Ansible, Pulumi<br/>
-
+              <p class="service-text">•	OAuth 2.0:<br/>
+                Протокол авторизации, обеспечивающий безопасную передачу данных между сервисами и упрощающий управление доступом к ресурсам.<br/><br/>
+                •	OpenID Connect:<br/>
+                Слой идентификации поверх OAuth 2.0, позволяющий эффективно управлять аутентификацией и обеспечивать единое логирование для различных сервисов.<br/><br/>
+                •	LDAP (Lightweight Directory Access Protocol):<br/>
+                Применяется для эффективного управления учетными записями пользователей, упрощая интеграцию с корпоративными каталогами.<br/><br/>
+                •	SSO (Single Sign-On):<br/>
+                Обеспечивает единый вход в систему, позволяющий пользователям получать доступ к нескольким приложениям без повторного ввода учетных данных.<br/><br/>
+                •	RBAC/ABAC:<br/>
+                Использование моделей управления доступом на основе ролей и атрибутов для тонкой настройки прав доступа в системе.<br/><br/>
+                •	Системы логирования:<br/>
+                Интеграция с современными системами логирования для сбора, анализа и хранения информации о действиях пользователей, что помогает в обеспечении безопасности и выполнении аудита.
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Целевая аудитория и клиентские сегменты</h2>
-              <p class="service-text">•	Стартапы: нуждаются в гибкой архитектуре, готовой к быстрому росту и частым изменениям требований.<br/>
-                •	Системные интеграторы: реализуют сложные проекты с множеством внешних систем и сервисов.<br/>
-                •	Крупные ИТ компании: модернизация устаревших монолитов и выстраивание единой корпоративной архитектуры.<br/>
-
+              <p class="service-text">•	Банковские учреждения:<br/>
+                Системы, требующие повышенной безопасности для защиты финансовых операций и клиентской информации.<br/><br/>
+                •	Государственные структуры:<br/>
+                Информационные системы с высокими требованиями к безопасности, конфиденциальности и соблюдению нормативных стандартов.<br/><br/>
+                •	Предприятия с высокой степенью конфиденциальности:<br/>
+                Организации, работающие с чувствительной информацией, которым необходим высокий уровень контроля доступа и аудита пользовательских операций.
 
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Возможности развития и интеграции</h2>
-              <p class="service-text">•	Облачные экосистемы
-                Глубокая интеграция с AWS, Azure, GCP: сервисы авто скейлинга, сервисные шины, FaaS.<br/>
-                •	DevOps и CI/CD
-                Встраивание архитектурных проверок в пайплайны Jenkins, GitLab CI, GitHub Actions.<br/>
-                •	Платформенные решения
-                Переход к PaaS/CaaS с использованием OpenShift, Cloud Foundry.<br/>
-                •	AI поддержка архитекторов
-                Инструменты анализа архитектурных паттернов на базе машинного обучения.<br/>
-                •	Enterprise Architecture Frameworks
-                Внедрение практик TOGAF, Zachman для стратегического управления ИТ ландшафтом.
-
+              <p class="service-text">•	Модульная архитектура:<br/>
+                Система построена с использованием модульного подхода, что позволяет легко масштабировать функционал и адаптировать продукт под специфические требования заказчика.<br/><br/>
+                •	Интеграция с корпоративными решениями:<br/>
+                Возможность подключать продукт к существующим информационным системам и платформам, таким как ERP, CRM и BI-системы, через RESTful API, что обеспечивает обмен данными в режиме реального времени.<br/><br/>
+                •	Поддержка облачных решений и мобильных платформ:<br/>
+                Разработка версий для работы в облаке и мобильных устройств обеспечивает гибкость в доступе и управлении системой как из локальной инфраструктуры, так и из удаленных офисов.<br/><br/>
+                •	Расширение функционала безопасности:<br/>
+                Планируется интеграция с системами обнаружения и предотвращения вторжений (IDS/IPS), что повысит общий уровень безопасности корпоративной сети.<br/><br/>
+                •	Обновления и поддержка стандартов безопасности:<br/>
+                Регулярное обновление системы с учетом новейших требований в области кибербезопасности и соответствие международным стандартам.<br/><br/>
+                •	Аналитика и искусственный интеллект:<br/>
+                Возможности для дальнейшей интеграции аналитических инструментов и алгоритмов машинного обучения для прогнозирования и предотвращения инцидентов безопасности.
 
               </p>
             </div>
@@ -190,7 +193,7 @@
               <h2 class="service-title">
                 Заключение
               </h2>
-              <p class="service-text">Сервис «Архитектурное проектирование» от АИС Сокол закладывает прочный технологический фундамент, позволяющий быстро адаптироваться к изменениям рынка и масштабировать решения без потери качества. Комбинация передовых практик DDD, микросервисов, SOA и API ориентированного подхода обеспечивает долгосрочную эффективность и предсказуемость развития ИТ продуктов.
+              <p class="service-text">«Система управления доступом» от АИС Сокол – это современное, высоконадежное решение, способное удовлетворить потребности организаций с особыми требованиями по безопасности данных. Продукт объединяет передовые технологии аутентификации, авторизации и контроля доступа, обеспечивая высокий уровень защиты информационных ресурсов. Гибкая архитектура и модульность системы позволяют легко адаптировать её под нужды крупнейших банков, государственных структур и предприятий с высокой степенью конфиденциальности. Внедрение системы способствует не только повышению безопасности, но и оптимизации бизнес-процессов, что делает продукт незаменимым инструментом в арсенале современных организаций.
               </p>
             </div>
           </div>
@@ -205,7 +208,7 @@
             <ul class="list">
               <li class="list-item "><i class="flaticon-web-development font-icon"></i><a href="./service-single-argoTech.html">ReID‑ система<br/> межкамерного трекинга<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-nanotechnology font-icon"></i><a href="./service-single-2.html">Автоматизация<br/> бизнес процессов<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item active"><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item "><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-4.html"> Биржа краудфандинга B2B<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-search font-icon"></i><a href="./service-single-5.html">Веб-сайты<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-6.html"> Интеграция модулей ИИ<i class="bi bi-arrow-right icon "></i></a></li>
@@ -214,7 +217,7 @@
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-9.html">Научные модули<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-10.html">Облачная платформа<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-11.html">Система видеоконтроля<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-12.html">Система управления доступом<i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item active"><i class="flaticon-strategy font-icon"></i><a href="./service-single-12.html">Система управления доступом<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-13.html">Machine Vision<i class="bi bi-arrow-right icon "></i></a></li>
             </ul>
           </div>
@@ -325,50 +328,6 @@
 <!-- Start back-to-top Button-->
 <div class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up icon "></i>
 </div>
-<!-- End back-to-top Button-->
-<!-- Start privacy-policy-modal-->
-<div class="modal privacy-policy-modal fade" id="privacyPolicyModal" aria-labelledby="PrivacyPolicyModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable modal-xl ">
-    <div class="modal-content text-dark">
-      <div class="modal-header">
-        <h2 class="modal-title" id="PrivacyPolicyModalLabel">Privacy Policy Modal Title</h2>
-        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn-solid" type="button" data-bs-dismiss="modal" aria-label="Close">Click to close</button>
-        <button class="btn-outline" type="button">Do somthing else</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End privacy-policy-modal-->
-
 <!--     JQuery     -->
 <script src="../../js/vendors/jquery-3.6.1.min.js"></script>
 
