--- a/html/flex-it/pages/service/service-single-8.html
+++ b/html/flex-it/pages/service/service-single-8.html
@@ -35,7 +35,7 @@
 
   <!-- main-LTR -->
   <link rel="stylesheet" href="../../css/main-LTR.css">
-  <title> flex-IT   |   Архитектурное проектирование</title>
+  <title> flex-IT   |  Компьютерное зрение</title>
 </head>
 <body class=" dark-theme ">
 <!--Start Page Header-->
@@ -85,7 +85,7 @@
   <div class="overlay-color" data-bg-opacity=".75"></div>
   <div class="container">
     <div class="hero-text-area centerd">
-      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Архитектурное проектирование</h1>
+      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Компьютерное зрение</h1>
       <nav aria-label="breadcrumb ">
         <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
           <li class="breadcrumb-item"><a class="breadcrumb-link" href="#0"><i class="bi bi-house icon "></i>Главная</a></li>
@@ -107,7 +107,7 @@
           <div class="service-content">
             <div class="part">
               <h2 class="service-title">Описание</h2>
-              <p class="service-text">«Архитектурное проектирование» от АИС Сокол — это специализированный сервис по созданию устойчивой, масштабируемой и гибкой архитектуры программных решений. Мы помогаем заказчикам закладывать прочный фундамент для долгосрочного развития, минимизировать технический долг и обеспечить лёгкость внедрения новых функций.</p>
+              <p class="service-text">«Компьютерное зрение» от АИС Сокол — это модульная платформа для автоматизированного сбора и анализа визуальных данных в агротехнологиях и при обследовании строительных конструкций. Система сочетает беспилотные и стационарные датчики, нейросетевые алгоритмы и edge аналитику, что позволяет оперативно выявлять дефекты, строить детализированные карты и формировать рекомендации для принятия решений.</p>
             </div>
             <div class="part">
               <div class="two-cols-img ">
@@ -127,70 +127,62 @@
           <div class="service-content">
             <div class="part">
               <h2 class="service-title">Основные возможности и функционал</h2>
-              <p class="service-text">•	Анализ требований и доменной модели<br/>
-                Глубокое изучение бизнес процессов заказчика.<br/>
-                Проектирование доменных контекстов в соответствии с DDD (Domain Driven Design).<br/><br/>
-                •	Проектирование микросервисов и SOA<br/>
-                Разбиение монолита на микросервисы с чёткими границами ответственности.<br/>
-                Построение сервис ориентированной архитектуры (SOA) для корпоративных систем.<br/><br/>
-                •	API Gateway и управление контрактами<br/>
-                Настройка API Gateway для маршрутизации, аутентификации и контроля версий.<br/>
-                Документирование и валидация API контрактов (OpenAPI/Swagger).<br/><br/>
-                •	Проектирование событийных потоков<br/>
-                Внедрение Event Driven подхода с использованием брокеров сообщений.<br/>
-                Проектирование CQRS и Event Sourcing для сложных сценариев.<br/><br/>
-                •	Управление качеством и безопасностью<br/>
-                Выбор паттернов отказоустойчивости (Circuit Breaker, Bulkhead).<br/>
-                Интеграция стандартов безопасности (OAuth2, OpenID Connect, JWT).<br/><br/>
-                •	Документирование и прототипирование<br/>
-                Генерация архитектурных диаграмм (C4, UML).<br/>
-                Быстрые прототипы ключевых компонентов для валидации концепций.<br/><br/>
-
-
+              <p class="service-text">•	Сбор данных<br/>
+                Автономные дроны с RGB-, мульти  и гиперспектральными камерами.<br/>
+                Стационарные датчики (тепловизоры, LiDAR сканеры) для круглосуточного мониторинга.<br/><br/>
+                •	Предобработка изображений<br/>
+                Коррекция геометрических и цветовых искажений.<br/>
+                Выравнивание и сшивка аэрофотоснимков в единую панораму.<br/><br/>
+                •	Обнаружение дефектов и аномалий<br/>
+                Диагностика растений: определение зон стресса, болезней, недостатка влаги (NDVI карты).<br/>
+                Обследование конструкций: обнаружение трещин, коррозии, деформаций и осадок.<br/><br/>
+                •	Построение карт и визуализация<br/>
+                Генерация 2D  и 3D карт полей и объектов.<br/>
+                Тепловые и вегетационные карты с наложением в GIS системах.<br/><br/>
+                •	Edge аналитика и оповещения<br/>
+                Запуск моделей прямо на борту дрона или на периферийных устройствах (Jetson, Raspberry Pi).<br/>
+                Автоматические уведомления о критических аномалиях по SMS, e mail или в мессенджерах.<br/><br/>
+                •	Отчётность и рекомендации<br/>
+                Детализированные отчёты с описанием обнаруженных проблем и шагов по их устранению.<br/>
+                API для интеграции с ERP/BI системами заказчика.
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Используемые технологии</h2>
-              <p class="service-text">•	Microservices & SOA: Spring Cloud, Quarkus, .NET Core, Apache Camel<br/>
-                •	API Gateway: Kong, AWS API Gateway, NGINX Plus, Zuul<br/>
-                •	Domain Driven Design: EventStorming, Context Mapping, Aggregates<br/>
-                •	Messaging & Eventing: Apache Kafka, RabbitMQ, AWS SNS/SQS<br/>
-                •	Контейнеризация и оркестрация: Docker, Kubernetes, Helm<br/>
-                •	Service Mesh: Istio, Linkerd<br/>
-                •	Инфраструктура как код: Terraform, Ansible, Pulumi<br/>
-
+              <p class="service-text">•	AI & CV: нейросети CNN (YOLO, UNet), OpenCV, TensorFlow, PyTorch<br/>
+                •	Edge аналитика: NVIDIA Jetson, Google Coral, Raspberry Pi<br/>
+                •	Дроны и датчики: DJI Matrice, мульти /гиперспектральные камеры, LiDAR, тепловизоры<br/>
+                •	Инфраструктура: Docker, Kubernetes, 5G/LoRaWAN для передачи данных<br/>
+                •	Платформы интеграции: REST API, MQTT, OPC UA
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Целевая аудитория и клиентские сегменты</h2>
-              <p class="service-text">•	Стартапы: нуждаются в гибкой архитектуре, готовой к быстрому росту и частым изменениям требований.<br/>
-                •	Системные интеграторы: реализуют сложные проекты с множеством внешних систем и сервисов.<br/>
-                •	Крупные ИТ компании: модернизация устаревших монолитов и выстраивание единой корпоративной архитектуры.<br/>
-
-
+              <p class="service-text">•	Аграрные компании: фермерские хозяйства, агрохолдинги, агротех стартапы<br/>
+                •	Строительные организации: подрядчики, инспекционные службы, сервисы технадзора<br/>
+                •	ГОКи (горно обогатительные комбинаты): мониторинг карьеров, складов, инфраструктурных объектов<br/>
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">Возможности развития и интеграции</h2>
-              <p class="service-text">•	Облачные экосистемы
-                Глубокая интеграция с AWS, Azure, GCP: сервисы авто скейлинга, сервисные шины, FaaS.<br/>
-                •	DevOps и CI/CD
-                Встраивание архитектурных проверок в пайплайны Jenkins, GitLab CI, GitHub Actions.<br/>
-                •	Платформенные решения
-                Переход к PaaS/CaaS с использованием OpenShift, Cloud Foundry.<br/>
-                •	AI поддержка архитекторов
-                Инструменты анализа архитектурных паттернов на базе машинного обучения.<br/>
-                •	Enterprise Architecture Frameworks
-                Внедрение практик TOGAF, Zachman для стратегического управления ИТ ландшафтом.
-
-
+              <p class="service-text">•	Новые сенсоры и платформы<br/>
+                Поддержка гиперспектральных и ультрафиолетовых камер.<br/>
+                Интеграция с наземными роботами осмотровиками.<br/><br/>
+                •	Облачные вычисления и масштабирование<br/>
+                Автоматическое масштабирование аналитики в AWS, Azure или локальном private cloud.<br/><br/>
+                •	Интеграция с GIS и BIM<br/>
+                Экспорт данных в ArcGIS, QGIS, Autodesk Revit для дальнейшего проектирования.<br/><br/>
+                •	AI дообучение и AutoML<br/>
+                Модули автоматического подбора и дообучения моделей на данных заказчика.<br/><br/>
+                •	Мобильные и веб приложения<br/>
+                Портал и мобильный клиент для оперативного доступа к картам, отчётам и live видео с дронов.
               </p>
             </div>
             <div class="part">
               <h2 class="service-title">
                 Заключение
               </h2>
-              <p class="service-text">Сервис «Архитектурное проектирование» от АИС Сокол закладывает прочный технологический фундамент, позволяющий быстро адаптироваться к изменениям рынка и масштабировать решения без потери качества. Комбинация передовых практик DDD, микросервисов, SOA и API ориентированного подхода обеспечивает долгосрочную эффективность и предсказуемость развития ИТ продуктов.
+              <p class="service-text">Платформа «Компьютерное зрение» от АИС Сокол сочетает передовые технологии AI, CV, edge аналитику и беспилотные системы для полного цикла сбора и анализа визуальных данных. Решение обеспечивает высокую точность диагностики в агросекторе и строительной инспекции, ускоряет принятие решений и снижает операционные риски заказчиков.
               </p>
             </div>
           </div>
@@ -205,12 +197,12 @@
             <ul class="list">
               <li class="list-item "><i class="flaticon-web-development font-icon"></i><a href="./service-single-argoTech.html">ReID‑ система<br/> межкамерного трекинга<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-nanotechnology font-icon"></i><a href="./service-single-2.html">Автоматизация<br/> бизнес процессов<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item active"><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item "><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-4.html"> Биржа краудфандинга B2B<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-search font-icon"></i><a href="./service-single-5.html">Веб-сайты<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-6.html"> Интеграция модулей ИИ<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-7.html">ИИ системы под ключ<i class="bi bi-arrow-right icon "></i></a></li>
-              <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-8.html"> Компьютерное зрение<i class="bi bi-arrow-right icon "></i></a></li>
+              <li class="list-item active"><i class="flaticon-strategy font-icon"></i><a href="./service-single-8.html"> Компьютерное зрение<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-9.html">Научные модули<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-10.html">Облачная платформа<i class="bi bi-arrow-right icon "></i></a></li>
               <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-11.html">Система видеоконтроля<i class="bi bi-arrow-right icon "></i></a></li>
@@ -325,50 +317,6 @@
 <!-- Start back-to-top Button-->
 <div class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up icon "></i>
 </div>
-<!-- End back-to-top Button-->
-<!-- Start privacy-policy-modal-->
-<div class="modal privacy-policy-modal fade" id="privacyPolicyModal" aria-labelledby="PrivacyPolicyModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable modal-xl ">
-    <div class="modal-content text-dark">
-      <div class="modal-header">
-        <h2 class="modal-title" id="PrivacyPolicyModalLabel">Privacy Policy Modal Title</h2>
-        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-        <div class="content">
-          <h4>privacy policy item Title goes here </h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe, labore sequi libero nesciunt optio quidem iste, dolorum nostrum ex at. Recusandae ducimus aut autem temporibus tempore rerum, consequuntur doloribus perspiciatis, labore totam dolorem veritatis repellendus omnis illo sint ut?</p>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn-solid" type="button" data-bs-dismiss="modal" aria-label="Close">Click to close</button>
-        <button class="btn-outline" type="button">Do somthing else</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End privacy-policy-modal-->
-
 <!--     JQuery     -->
 <script src="../../js/vendors/jquery-3.6.1.min.js"></script>
 
