--- a/html/flex-it/pages/service/service-single-argoTech.html
+++ b/html/flex-it/pages/service/service-single-argoTech.html
@@ -35,7 +35,7 @@
         
         <!-- main-LTR -->
         <link rel="stylesheet" href="../../css/main-LTR.css">
-        <title> flex-IT   |   Агротехнологические платформы на базе компьютерного зрения</title>
+        <title> flex-IT   |   ReID‑ система межкамерного трекинга</title>
   </head>
   <body class=" dark-theme "> 
     <!--Start Page Header-->
@@ -85,7 +85,7 @@
       <div class="overlay-color" data-bg-opacity=".75"></div>
       <div class="container">
         <div class="hero-text-area centerd">
-          <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Агротехнологические платформы на базе компьютерного зрения</h1>
+          <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">ReID‑ система межкамерного трекинга</h1>
           <nav aria-label="breadcrumb ">
             <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
               <li class="breadcrumb-item"><a class="breadcrumb-link" href="#0"><i class="bi bi-house icon "></i>Главная</a></li>
@@ -107,7 +107,7 @@
               <div class="service-content">
                 <div class="part">
                   <h2 class="service-title">подробнее</h2>
-                  <p class="service-text">Наша платформа — это комплексное IT-решение для автоматизации земледелия, объединяющее возможности компьютерного зрения, геопривязки и IoT. Система обрабатывает снимки с дронов и спутников, анализирует состояние растений и создает актуальные карты ваших угодий. Это позволяет агропредприятиям оперативно реагировать на изменения, повышать урожайность и снижать издержки за счёт точного, автоматизированного контроля агрообъектов.</p>
+                  <p class="service-text">ReID‑система межкамерного трекинга — это интегрированное решение для сквозного отслеживания объектов на территории с множеством камер. Система объединяет видеопотоки из различных точек наблюдения, автоматически распознаёт и сопоставляет объекты (людей, транспорт, оборудование) при переходе из зоны покрытия одной камеры в зону другой, и строит непрерывные траектории их перемещения. Благодаря единой платформе операторы получают полную картину передвижений в реальном времени и историю перемещений за любой период.</p>
                 </div>
                 <div class="part">
                   <div class="two-cols-img ">
@@ -123,6 +123,68 @@
                 </div>
               </div>
             </div>
+            <div class="service-content-area">
+              <div class="service-content">
+                <div class="part">
+                  <h2 class="service-title">Основные возможности и функционал</h2>
+                  <p class="service-text">•	Мультикамерная синхронизация
+                    Сбор и корреляция видеопотоков с разных устройств с учётом временных меток и геометрии размещения камер.<br/>
+                    •	Re ID (Re Identification)
+                    Надёжная идентификация одного и того же объекта на разных камерах с учётом изменений ракурса, освещения и позы.<br/>
+                    •	Построение траекторий
+                    Визуализация путей движения объектов на схеме объекта или карте, расчёт скорости и времени нахождения в зонах.<br/>
+                    •	Аналитика и отчёты
+                    Выгрузка статистики по пересечениям зон, времени ожидания, популярным маршрутам и аномальным движениям.<br/>
+                    •	Система оповещений
+                    Настраиваемые триггеры: вход/выход из охраняемых зон, пересечение границ, длительное нахождение в “опасных” зонах.<br/>
+                    •	Интерфейс оператора
+                    Интуитивный веб клиент с панорамным обзором камер, панелью событий и возможностью “перескока” на любой этап траектории.
+                  </p>
+                </div>
+                <div class="part">
+                  <h2 class="service-title">Используемые технологии</h2>
+                  <p class="service-text">•	Re Identification (ReID): глубокие сверточные сети для извлечения и сравнения эмбеддингов объектов.<br/>
+                  •	Видеоаналитика: детекторы на базе YOLO/Faster R CNN для выделения людей и техники.<br/>
+                  •	AI и Deep Learning: LSTM/Transformer модули для предсказания траекторий и сглаживания переходов между камерами.<br/>
+                  •	Camera Stitching & Calibration: автоматическая геометрическая привязка камер в единую координатную систему.<br/>
+                  •	Edge Computing: локальная предобработка и фильтрация данных на видеосерверах или умных камерах.<br/>
+                  •	Масштабируемая архитектура: контейнеризация (Docker, Kubernetes), брокеры сообщений (Kafka/RabbitMQ) для надёжного потока данных.</p>
+                </div>
+                <div class="part">
+                  <h2 class="service-title">Целевая аудитория и клиентские сегменты</h2>
+                  <p class="service-text">•	Системы контроля доступа (СКУД)
+                    Автоматизация проверки пересечений границ доступа, усиление верификации персонала.<br/>
+                    •	Службы безопасности и охраны
+                    Мониторинг периметра, быстрое реагирование на несанкционированные передвижения.<br/>
+                    •	Общественные объекты
+                    Аэропорты, вокзалы, стадионы и ТЦ: оптимизация пассажиропотока, предупреждение давок и ЧП.<br/>
+                    •	Корпоративные и государственные структуры
+                    Контроль перемещений сотрудников, посетителей и транспорта на закрытых территориях.
+                  </p>
+                </div>
+                <div class="part">
+                  <h2 class="service-title">Возможности развития и интеграции</h2>
+                  <p class="service-text">•	Интеграция с VMS и СКУД
+                    Подключение к Milestone, Genetec, Hikvision, а также к популярным системам контроля доступа.<br/>
+                    •	Модуль прогнозной аналитики
+                    Выявление паттернов передвижения и прогноз “горячих зон” с высокой плотностью.<br/>
+                    •	Мобильное приложение для охраны
+                    Push уведомления и просмотр текущих траекторий на смартфонах и планшетах.<br/>
+                    •	Интеграция с GIS
+                    Наложение маршрутов на географические карты для объектов с большой территорией.<br/>
+                    •	API экосистема
+                    Открытые REST/WebSocket интерфейсы для создания кастомных отчётов и виджетов.
+                  </p>
+                </div>
+                <div class="part">
+                  <h2 class="service-title">
+                    Заключение
+                  </h2>
+                  <p class="service-text">ReID‑система межкамерного трекинга предоставляет комплексный подход к межкамерному трекингу: от точной идентификации объектов до глубокого анализа их поведения. Система повышает эффективность работы служб безопасности, облегчает расследование инцидентов и даёт инструменты для оптимизации потоков людей и транспорта на любых объектах — от офисов и складов до крупных общественных пространств.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
           <!--Start service content-->
           <!-- Start service sidebar-->
@@ -131,12 +193,19 @@
               <div class="sidebar-pane">
                 <h2 class="sidebar-title">Услуги</h2>
                 <ul class="list">
-                  <li class="list-item active"><i class="flaticon-web-development font-icon"></i><a href="./service-single-argoTech.html"> Агротехнологические<br/> платформы <i class="bi bi-arrow-right icon "></i></a></li>
-                  <li class="list-item"><i class="flaticon-nanotechnology font-icon"></i><a href="./service-single-2.html">Прогнозно-<br/>аналитические<i class="bi bi-arrow-right icon "></i></a></li>
-                  <li class="list-item"><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html"> Система<br/> визуального контроля качества <i class="bi bi-arrow-right icon "></i></a></li>
-                  <li class="list-item"><i class="flaticon-profile font-icon"></i><a href="./service-single-4.html"> Apps development<i class="bi bi-arrow-right icon "></i></a></li>
-                  <li class="list-item"><i class="flaticon-search font-icon"></i><a href="./service-single-5.html">Система распознавания<br/> лиц и силуэтов<i class="bi bi-arrow-right icon "></i></a></li>
-                  <li class="list-item"><i class="flaticon-strategy font-icon"></i><a href="./service-single-6.html"> Модуль определения<br/> размеров и расстояний<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item active"><i class="flaticon-web-development font-icon"></i><a href="./service-single-argoTech.html">ReID‑ система<br/> межкамерного трекинга<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-nanotechnology font-icon"></i><a href="./service-single-2.html">Автоматизация<br/> бизнес процессов<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Архитектурное проектирование <i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-4.html"> Биржа краудфандинга B2B<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-search font-icon"></i><a href="./service-single-5.html">Веб-сайты<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-6.html"> Интеграция модулей ИИ<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-7.html">ИИ системы под ключ<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-8.html"> Компьютерное зрение<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-9.html">Научные модули<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-10.html">Облачная платформа<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-11.html">Система видеоконтроля<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-12.html">Система управления доступом<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-strategy font-icon"></i><a href="./service-single-13.html">Machine Vision<i class="bi bi-arrow-right icon "></i></a></li>
                 </ul>
               </div>
             </div>
@@ -151,10 +220,15 @@
       <div class="overlay-photo-image-bg" data-bg-img="assets/images/sections-bg-images/footer-bg-1.jpg" data-bg-opacity=".25"></div>
       <div class="container">
         <div class="row footer-cols">
-          <div class="col-12 col-md-8 col-lg-4  footer-col "><img class="img-fluid footer-logo" loading="lazy" src="../../assets/images/logo/logo-colored.png" alt="logo">
+          <div class="col-12 col-md-8 col-lg-4  footer-col  ">
+            <span class='featured-text'>АИС Сокол
+              <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 500 150" preserveaspectratio="none">
+               <path d="M7.7,145.6C109,125,299.9,116.2,401,121.3c42.1,2.2,87.6,11.8,87.3,25.7"></path>
+              </svg>
+            </span>
             <div class="footer-col-content-wrapper">
-              <p class="footer-text-about-us ">
-                Мы создаём современные и функциональные веб-сайты, которые помогают вашему бизнесу выделиться и привлекать клиентов.
+              <p class="footer-text-about-us mt-4 ">
+                Выполняет заказную разработку и комплексное внедрение IT решений для автоматизации бизнес процессов. Мы создаём системы «под ключ», адаптированные под ваши уникальные задачи, и гарантируем стабильную работу в любых условиях.
 
               </p>
             </div>
@@ -183,27 +257,24 @@
             <h2 class=" footer-col-title    ">Заказная разработка</h2>
             <div class="footer-col-content-wrapper">
               <ul class="footer-menu">
-                <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">Агротехнологические
-                  платформы</a>
+                <li class="footer-menu-item "><i class="bi bi-arrow-right icon "></i><a class="about-text" href="../service/service-single-argoTech.html">
+                  <span class="about-text">ReID‑ система межкамерного трекинга</span> </a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Прогнозно-
-                  аналитические</a>
+                  Автоматизация бизнес процессов</a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">Система
-                  визуального контроля качества
+                  Архитектурное проектирование
                 </a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Apps development</a>
+                  Веб-сайты</a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Система распознавания
-                  лиц и силуэтов</a>
+                  Интеграция модулей ИИ</a>
                 </li>
                 <li class="footer-menu-item"><i class="bi bi-arrow-right icon "></i><a class="footer-menu-link" href="../service/service-single-argoTech.html">
-                  Модуль определения
-                  размеров и расстояний</a>
+                  ИИ системы под ключ</a>
                 </li>
               </ul>
             </div>
